# url-shortener

./: .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 1f506d5ab46d_create_urls_table.py  3f5415eea2a8_final.py  661fa6fcd8f4_.py  72e8db78b7cb_final2.py
app/: base62.py  cache.py  database.py  main.py  models.py  schemas.py  settings.py  utils.py
src/: database.py  main.py  models.py  schemas.py  settings.py
templates/: index.html
tests/: test_main.py
