[project]
name = "url-shortener"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.1",
    "asyncio>=4.0.0",
    "asyncpg>=0.31.0",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.128.0",
    "redis[hiredis]>=7.1.0",
    "ruff>=0.14.13",
    "sqlalchemy[asyncio]>=2.0.45",
]
